fix socials window size

--- a/index.html
+++ b/index.html
@@ -163,50 +163,53 @@
 			</div>
 		</div>
 
-		<div class="window-content socials">
-			<div class="hover-box tooltip" title="GitHub">
-				<div class="tooltiptext">GitHub<i></i></div>
-				<a class="button popout icon github" href="https://github.com/SumishiM" target="_blank">
-					<img src="images/github.png" alt="GitHub" width="25" height="25" />
-				</a>
-			</div>
-			<div class="hover-box tooltip" title="Itch.io">
-				<div class="tooltiptext">Itch.io<i></i></div>
-				<a class="button popout icon itchio" href="https://sumishi.itch.io/" target="_blank">
-					<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
-				</a>
-			</div>
-			<div class="hover-box tooltip" title="LinkedIn">
-				<div class="tooltiptext">LinkedIn<i></i></div>
-				<a class="button popout icon linkedin" href="https://www.linkedin.com/in/hugo-michel-sumishi/"
-					target="_blank">
-					<img src="images/linkedin.png" alt="LinkedIn" width="25" height="25" />
-				</a>
-			</div>
-			<div class="hover-box tooltip" title="Instagram">
-				<div class="tooltiptext">Instagram<i></i></div>
-				<a class="button popout icon instagram" href="https://www.instagram.com/hgo_michl?igsh=amsydGlsMXlvdGlm"
-					target="_blank">
-					<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
-				</a>
-			</div>
-			<!--<div class="hover-box" title="Twitter">
+		<div class="window-content">
+			Here are every socials I use !
+			<div class="flex-array">
+				<div class="hover-box tooltip" title="GitHub">
+					<div class="tooltiptext">GitHub<i></i></div>
+					<a class="button popout icon github" href="https://github.com/SumishiM" target="_blank">
+						<img src="images/github.png" alt="GitHub" width="25" height="25" />
+					</a>
+				</div>
+				<div class="hover-box tooltip" title="Itch.io">
+					<div class="tooltiptext">Itch.io<i></i></div>
+					<a class="button popout icon itchio" href="https://sumishi.itch.io/" target="_blank">
+						<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
+					</a>
+				</div>
+				<div class="hover-box tooltip" title="LinkedIn">
+					<div class="tooltiptext">LinkedIn<i></i></div>
+					<a class="button popout icon linkedin" href="https://www.linkedin.com/in/hugo-michel-sumishi/"
+						target="_blank">
+						<img src="images/linkedin.png" alt="LinkedIn" width="25" height="25" />
+					</a>
+				</div>
+				<div class="hover-box tooltip" title="Instagram">
+					<div class="tooltiptext">Instagram<i></i></div>
+					<a class="button popout icon instagram"
+						href="https://www.instagram.com/hgo_michl?igsh=amsydGlsMXlvdGlm" target="_blank">
+						<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
+					</a>
+				</div>
+				<!--<div class="hover-box" title="Twitter">
 				<a class="button popout icon twitter" target="_blank">
 					<img src="images/twitter.png" alt="Twitter" width="25" height="25" />
 				</a>
 			</div>-->
-			<div class="hover-box tooltip" title="Discord">
-				<div class="tooltiptext">Discord<i></i></div>
-				<a class="button popout icon discord" href="https://discord.com/users/286171790349303809"
-					target="_blank">
-					<img src="images/discord.png" alt="Discord" width="25" height="25" />
-				</a>
+				<div class="hover-box tooltip" title="Discord">
+					<div class="tooltiptext">Discord<i></i></div>
+					<a class="button popout icon discord" href="https://discord.com/users/286171790349303809"
+						target="_blank">
+						<img src="images/discord.png" alt="Discord" width="25" height="25" />
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- Contact -->
-	<div class="window active" id="contact" title="Contact" style="top: 190px; left: 1220px; max-width: 300px">
+	<div class="window active" id="contact" title="Contact" style="top: 200px; left: 1220px; max-width: 300px">
 		<div class="window-header" id="contactheader">
 			<div class="window-title">Contact me</div>
 			<div onclick="Hide('contact')">
