--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
 			<p>
 				Time at my place : <span id="datetime"></span><br><br>
 				<!-- programming -->
-				Hi! I'm Hugo Michel - AKA Sumishi, I'm 21.<br>
-				I'm a french video game programmer, mainly interested in game engine programming, tools and procedural
-				generation but I also love to experimenting all kinds of stuffs retated to programming for fun or just
-				out of curiosity.<br><br>
+				Hello ! Moi c'est Hugo Michel (AKA Sumishi) j'ai 21 ans.<br>
+				Je suis un programmeur de jeux vidéo français, principalement interessé par le developpement de moteurs
+				de jeux, outils et génération procédurale. J'aime également expérimenter d'autres choses liés à la
+				programmation, par curiosité ou juste pour m'amuser.<br><br>
 
-				I started programming in 2020 at Creajeux and never stopped since. During my study, I made several cool
-				projects, alone or with a team, last one being <a onclick="Show('geckoparty')"><strong>Gecko
-						Party</strong></a>.<br><br>
+				J'ai commencé la programmation en 2020 a Creajeux et je n'ai jamais arrété. Pendant mes études j'ai
+				travaillé sur plusieurs projets, seul ou en groupe, le dernier étant
+				<a onclick="Show('geckoparty')"><strong>GeckoParty</strong></a>.<br><br>
 
-				Most of my projects are available on <a href="https://github.com/SumishiM"
-					target="_blank"><strong>GitHub</strong></a> if you want to check<br><br>
+				La majorité de mes projets solo sont disponible sur mon <a href="https://github.com/SumishiM"
+					target="_blank"><strong>GitHub</strong></a> si ça vois intéresse ! <br><br>
 
-				<!-- hobbies -->
-				I enjoy playing video games, my favorite genre being 2D platformers, no matter the difficulty.<br>
-				I also do some beekeeping with my father, to help him most of the time.
+				J'apprécie également jouer aux jeux vidéo, étant un grand fan de jeux 2D en pixel art tels que Celeste
+				ou Rain World.<br>
+				Je fais aussi de l'apiculture avec mon père pour l'aider dans son travail.
 			</p>
 		</div>
 	</div>
@@ -137,8 +137,8 @@
 
 		<div class="window-content about">
 			<p>
-				I like having some variety on what task I can do at a given moment, that's why I have multiples projects
-				running at once.
+				J'aime avoir le choix dans le travail que j'effectue, c'est pourquoi je travail toujours sur plusieurs
+				projets en simultané. Actuellement je travail sur ces projets :
 			</p>
 			<div class="flex-array">
 				<div class="hover-box" title="Pyrite">
@@ -148,7 +148,7 @@
 					<a class="button popout beerylis" onclick="Show('beerylis')">Beerylis</a>
 				</div>
 				<div class="hover-box" title="Ignite">
-					<a class="button popout ignite" onclick="Show('ignite')">Ignite EC Framework</a>
+					<a class="button popout ignite" onclick="Show('ignite')">Ignite ECS Framework</a>
 				</div>
 			</div>
 		</div>
@@ -164,7 +164,7 @@
 		</div>
 
 		<div class="window-content">
-			Here are every socials I use !
+			Les réseaux sociaux que j'utilise !
 			<div class="flex-array">
 				<div class="hover-box tooltip" title="GitHub">
 					<div class="tooltiptext">GitHub<i></i></div>
@@ -218,7 +218,8 @@
 		</div>
 
 		<div class="window-content contact">
-			You can contact me on any of my social medias, but I mainly use those if you wanna talk with me.
+			Vous pouvez me contacter sur tous mes réseaux mais si vous voulez me contacter, utilisez ceux ci pour avoir
+			une réponse plus rapide.
 
 			<div class="hover-box" title="hugosumishi@gmail.com">
 				<a class="button popout mail" href="mailto:hugosumishi@gmail.com" target="_blank">
@@ -254,7 +255,7 @@
 		</div>
 
 		<div class="window-content">
-			Since I started programming, I learned several programming languages such as :
+			Depuis que j'ai commencé la programmation j'ai appris ces langages de programmation :
 			<div class="flex-array">
 				<div class="hover-box tooltip">
 					<div class="tooltiptext">C#<i></i></div>
@@ -294,7 +295,7 @@
 				</div>
 			</div>
 			<div>
-				I also learned to work on those game engines :<br>
+				J'ai aussi appris à utiliser ces moteurs de jeux :
 				<div class="flex-array">
 					<div class="hover-box tooltip">
 						<div class="tooltiptext">Unreal Engine<i></i></div>
@@ -317,7 +318,7 @@
 				</div>
 			</div>
 			<div>
-				And I learned how to use those frameworks :<br>
+				Et j'utilise aussi ces frameworks :
 				<div class="flex-array">
 					<div class="hover-box tooltip">
 						<div class="tooltiptext">.NET MAUI<i></i></div>
@@ -360,39 +361,20 @@
 		<div class="window-content beerylis">
 			<div><strong>Work in progress ...</strong></div>
 			<p>
-				Beerylis is a <strong>beekeeping management software</strong> originally made for my father.
-				Then I realized it would be a usefull tool for other beekeepers and started working on it to make the
-				best software I can.
+				Beerylis est un logiciel de <strong>gestion apicole</strong> que je fais pour mon père pour simplifier
+				son travail.
 			</p>
 			<p>
-				The software is made in <strong>C# HTML and CSS</strong> with the frameworks <strong>.NET MAUI</strong>
-				and <strong>ASP.NETBlazor</strong>.
+				Je réalise ce logiciel en <strong>C#, HTML</strong> et <strong>CSS</strong> en utilisant <strong>.NET
+					MAUI</strong> et <strong>ASP.NET Blazor</strong>.
 			</p>
-			<p>
-				Here are the links to the project and my father website.
-			</p>
-			<!-- Beerylis website link -->
-			<div class="hover-box" title="WIP - Beerylis">
-				<a class="button popout beerylis" target="_blank">
-					<img src="images/beerylis.png" alt="Beerylis" width="25" height="25" />
-					WIP - Beerylis
-				</a>
-			</div>
-
-			<!-- Le Rucher des escaunes website link -->
-			<div class="hover-box" title="Le Rucher des Escaunes">
-				<a class="button popout escaunes" href="https://www.rucher-escaunes.fr/" target="_blank">
-					<!-- <img src="images/escaunes.png" alt="Escaunes" width="25" height="25" /> -->
-					Le Rucher des Escaunes
-				</a>
-			</div>
 		</div>
 	</div>
 
 	<!-- Ignite -->
 	<div class="window" id="ignite" title="Ignite" style="top: 465px; left: 635px;">
 		<div class="window-header" id="igniteheader">
-			<div class="window-title">Ignite EC Framework</div>
+			<div class="window-title">Ignite ECS Framework</div>
 			<div onclick="Hide('ignite')">
 				<img class="window-button window-close" src="images/close.png" alt="Close" width="20" height="20" />
 			</div>
@@ -401,23 +383,19 @@
 		<div class="window-content ignite">
 			<div><strong>Work in progress ...</strong></div>
 			<p>
-				Ignite is a <strong>C# ECS Framework</strong> I'm making for
-				<a onclick="Show('pyrite')"><strong> Pyrite</strong></a><br>.
+				Ignite est un <strong>framework d'ECS (Entity-Component-System)</strong> écrit en <strong>C#</strong>
+				que je réalise pour <strong><a onclick="Show('pyrite')">Pyrite</a></strong>.<br>
+				N'hésitez pas a visiter mon <strong><a href="https://sumishim.github.io/blogs/ignite">blog</a></strong>
+				qui explique en détail ce projet !
 			</p>
-			<div>Here is the GitHub repository if you are interested in it.</div>
+
+			<div>Voici le lien vers le GitHub du projet si le code vous interesse !</div>
 
 			<!-- Ignite github repo link-->
 			<div class="hover-box" title="Ignite repository">
 				<a class="button popout github" href="https://github.com/SumishiM/Ignite" target="_blank">
-					<img src="images/github.png" alt="Github" width="25" height="25" />
+					<img src="images/github.png" alt="GitHub" width="25" height="25" />
 					GitHub
-				</a>
-			</div>
-			<div>I also made a blog about it for more informations ! :D</div>
-			<div class="hover-box" title="Ignite Blog">
-				<a class="button popout blog" href="https://sumishim.github.io/blogs/ignite">
-					<!--<img src="images/github.png" alt="Github" width="25" height="25" />-->
-					Blog
 				</a>
 			</div>
 		</div>
@@ -435,11 +413,13 @@
 		<div class="window-content pyrite">
 			<div><strong>Work in progress ...</strong></div>
 			<p>
-				Pyrite is a <strong>C# game engine</strong> I'm making my final project at Creajeux.<br>
-				It implement my EC framework <a onclick="Show('ignite')"><strong> Ignite</strong></a><br>
+				Pyrite est un <strong>moteur de jeu</strong> que je réalise en <strong>C#</strong> pour mon projet de
+				soutenance de fin d'études à Creajeux. Ce projet implémente mon <strong>framework d'ECS <a
+						onclick="Show('ignite')">Ignite</a></strong>
+				ainsi que d'autres projets prévu à l'avenir : Coral (AI) et Scribe (Dialogs).
 			</p>
-			<div>Here is the GitHub repository if you are interested in it.</div>
 
+			<div>Si le code source du projet vous intéresse, le GitHub du projet est juste là !</div>
 			<div class="hover-box" title="Pyrite repository">
 				<a class="button popout github" href="https://github.com/SumishiM/Pyrite" target="_blank">
 					<img src="images/github.png" alt="Github" width="25" height="25" />
@@ -487,7 +467,7 @@
 		</div>
 
 		<div class="window-content geckoparty">
-			Made during my 3rd year at Creajeux <br>
+			Réalisé durant ma 3ème année à Créajeux.
 
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
@@ -497,12 +477,12 @@
 			</div>
 
 			<p>
-				Gecko Party is a local multiplayer party game made with Unity featuring 8 minigames and a large lobby to
-				explore !<br>
-
-				On this project, I worked on the project architecture and core systems, 2 out of the 8 minigames and a
-				major
-				part of the GUI.<br>
+				Gecko Party est un party game en multijoueurs local réalisé sur Unity. Le jeu propose 8 minijeux et un
+				grand lobby à explorer pour y trouver tous les secrets !<br>
+				Sur ce projet, j'ai principalement travaillé sur l'achitecture de code ainsi que les systems principaux,
+				j'ai également réalisé 2 minijeux, créé des VFX et shaders, et réalisé la majorité de l'interface en
+				jeu.
+				<br>
 			</p>
 
 			<iframe src="https://www.youtube.com/embed/X39tJUiFqlo" frameborder="0" allowfullscreen></iframe>
@@ -532,7 +512,8 @@
 		</div>
 
 		<div class="window-content stellaria" style="max-width: 800px; ">
-			Made during my 2nd year at Creajeux
+			Réalisé durant ma 2ème année à Créajeux.
+
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
 					<strong>9</strong></span>
@@ -541,10 +522,10 @@
 			</div>
 
 			<p>
-				Stellaria is a <strong>2D sandbox platformer</strong> game inspired of <strong>Terraria</strong> and
-				<strong>Starbound</strong> made in <strong>C++</strong> using <strong>SFML</strong>.<br>
-				On this project, I worked on the project architecture and the world system from the tiles datas to the
-				procedural generation and rendering.
+				Stellaria est un platformer sandbox 2D grandement inspiré par Terraria et Starbound. Le jeu a été
+				réalisé en C++ avec la SFML.<br>
+				Sur ce projet, j'ai travaillé sur l'architecture de code, le systeme de monde en allant des simple
+				tuiles à la génération procédurale et le rendu.
 			</p>
 
 			<iframe src="https://www.youtube.com/embed/ji3UeEr6V-A" frameborder="0" allowfullscreen></iframe>
@@ -568,8 +549,8 @@
 		</div>
 
 		<div class="window-content hydreomiel">
+			Réalisé durant ma 2ème année à Créajeux.
 
-			Made during my 2nd year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
 					<strong>11</strong></span>
@@ -578,10 +559,9 @@
 			</div>
 
 			<p>
-				Hydre'O'Miel is a <strong>card game</strong> made in <strong>C++</strong> using the
-				<strong>SFML</strong> graphic library<br>
-				On this project, I worked on the game architecture and game design, I also worked on some animations and
-				feedbacks.
+				Hydre'O'Miel est un jeu de carte en multijoueurs local réalisé en C++ avec la SFML.<br>
+				Sur ce projet, j'ai travaillé sur l'architecture de code ainsi que du game design, j'ai également
+				travaillé sur des animations et les feedbacks.
 			</p>
 
 			<strong>Some screenshots !</strong>
@@ -603,8 +583,8 @@
 		</div>
 
 		<div class="window-content daisysquest" style="max-width: 800px; ">
+			Réalisé durant ma 1ère année à Créajeux.
 
-			Made during my 1st year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
 					<strong>9</strong></span>
@@ -612,11 +592,10 @@
 					<strong>3 months</strong></span>
 			</div>
 			<p>
-				Daisy's Quest is a <strong>RPG</strong> game made in <strong>Lua</strong> using
-				<strong>LOVE2D</strong>.<br>
-				On this project, I worked on the map, loading/unloading, imports from Tiled, animated tiles, and level
-				design.
-				I also made some gameplay with the creation of the last boss and the AI of the goblin.<br><br>
+				Daisy's Quest est un RPG 2D en pixel art réalisé en Lua et utilisant LÖVE2D.<br>
+				Sur ce projet j'ai travaillé sur la gestion de la carte, l'importation des cartes depuis Tiled, la
+				gestion des animations de l'environnement et du level design.<br>
+				J'ai également fais du gameplay avec la création du boss final et l'IA de certains enemies.
 			</p>
 
 			<strong>Some screenshots !</strong>
@@ -638,8 +617,8 @@
 		</div>
 
 		<div class="window-content defendthekingdom">
+			Réalisé durant ma 1ème année à Créajeux.
 
-			Made during my 1st year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
 					<strong>3</strong></span>
@@ -647,10 +626,9 @@
 					<strong>2 weeks</strong></span>
 			</div>
 			<p>
-				Defend the Kingdom is a <strong>Tower defense</strong> game made in <strong>Lua</strong> using
-				<strong>LOVE2D</strong>.<br>
-				On this project, I worked on the map system, with tower placement and upgrades, imports from Tiled and
-				level design.
+				Defend the Kingdom est un Tower defense en vue isométrique réalisé en Lua et utilisant LÖVE2D.<br>
+				Sur ce projetn j'ai travaillé sur le systeme de carte avec la gestion des tours, l'importation des
+				cartes depuis Tiled et du level design.
 			</p>
 
 			<strong>Some screenshots !</strong>
@@ -672,8 +650,8 @@
 		</div>
 
 		<div class="window-content ishikoridome">
+			Réalisé durant ma 1ème année à Créajeux.
 
-			Made during my 1st year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
 					<strong>9</strong></span>
@@ -681,10 +659,8 @@
 					<strong>2 weeks</strong></span>
 			</div>
 			<p>
-				Le disciple d'Ishikori-Dome is a <strong>Roguelike</strong> game made in <strong>Lua</strong> using
-				<strong>LOVE2D</strong>.<br>
-				On this project, I worked on the map system, with the collision system and the procedural generation. I
-				also did some gameplay with the boss AI.
+				Le disciple d'Ishikori-Dome est un Roguelike réalisé en Lua avec LÖVE2D.<br>
+				Sur ce projet, j'ai travaillé sur la génération du donjon, ainsi que le controller du joueur et l'IA du boss final.
 			</p>
 		</div>
 	</div>
